--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p $PORT", 
     "lint": "next lint"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.453.0",
-    "next": "^15.0.0",
+    "next": "^15.0.0", 
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.70.0",
