--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_BACKEND_API_URL=http://localhost:5000/api/v1
+NEXT_PUBLIC_BACKEND_API_URL=https://photogram-backend-e2e5hec9a6frc6en.germanywestcentral-01.azurewebsites.net
